fixed whitespace

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
 
 .whitespace
 {
-    height: 100px;
+    height: 30vh;
     width: auto;
     box-shadow: 0 0 10px 10px white;
 }
